--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/fonts.css" />
-    <title>Vite + Solid + TS</title>
+    <title>Code Breaker</title>
   </head>
   <body>
     <div id="root"></div>
